[package]
name = "datastore-mysql"
version = "0.1.0"
edition = "2021"

[dependencies]
datastore = "0.1.4"
sqlx = { version = "0.5.13", features = ["mysql", "runtime-tokio-rustls"] }
async-trait = "0.1.53"
log = "0.4.17"
futures = "0.3.21"

[dev-dependencies]
datastore = { version = "0.1.4", features = ["derive"] }
tokio = { version = "1.19.2", features = ["macros"] }
