[package]
name = "datastore-mysql"
version = "0.2.0"
edition = "2021"
description = "A datastore Store using the MySQL database"
authors = ["MrGunflame <mrgunflame@protonmail.com>"]
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/datastore-mysql"
repository = "https://github.com/MrGunflame/datastore-mysql"

publish = true

[dependencies]
datastore = "0.1.5"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-rustls"] }
async-trait = "0.1.57"
log = "0.4.17"
futures = "0.3.24"

[dev-dependencies]
datastore = { version = "0.1.5", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros"] }
